Remove some Drexel links, but kept links to my home page

--- a/personal.html
+++ b/personal.html
@@ -2,7 +2,7 @@
 
 <body background="http://www.cs.drexel.edu/~david/Images/redpaper.jpg">
 
-  <H1>David E. Breen Personal Links</H1>
+  <H1><a href="http://www.cs.drexel.edu/~david">David E. Breen</a> Personal Links</H1>
 
 <p>
 <h1><IMG SRC="http://www.cs.drexel.edu/~david/Icons/blueball.gif"> Interesting Things to Read/Watch/Listen To</h1>
@@ -1622,15 +1622,17 @@ National Historic Site</a>
 
 <p>
 
+<!--
 <a href="http://www.drexel.edu/"><img align=bottom src="http://www.cs.drexel.edu/~david/Icons/DrexelLogo.jpg" height=60></a>
 <a href="http://www.drexel.edu/cci"><IMG ALIGN=BOTTOM SRC="http://www.cs.drexel.edu/~david/Icons/Rush_crop_small.png"</a>
 <a href="http://www.cs.drexel.edu/"><IMG ALIGN=BOTTOM SRC="http://www.cs.drexel.edu/~david/Icons/CS_pix.jpg" height=60></a>
+-->
 <a href="http://www.cs.drexel.edu/~david"><IMG ALIGN=BOTTOM SRC="http://www.cs.drexel.edu/~david/Icons/pot1_tiny.gif" height=60></a>
 
 <p>
 
 <HR>
 
-Last modified on January 15, 2025.
+Last modified on March 21, 2025.
 
 </html>
