--- a/personal.html
+++ b/personal.html
@@ -4,7 +4,7 @@
 
   <H1><a href="http://www.cs.drexel.edu/~david">David E. Breen</a> Personal Links</H1>
 
-  <a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/"><img src="hand-holding-blank-placard.jpg"></a>
+  <a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/"><img width="300" align="center" src="hand-holding-blank-placard.jpg"></a>
 
 <p>
 <h1><IMG SRC="http://www.cs.drexel.edu/~david/Icons/blueball.gif"> Interesting Things to Read/Watch/Listen To</h1>
