Added freepik text.

--- a/personal.html
+++ b/personal.html
@@ -6,6 +6,7 @@
 
   <center>
   <a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/"><img width="400" align="center" src="hand-holding-placard.jpg"></a>
+<a href="http://www.freepik.com"><p style="font-size:8px">Blank placard designed by Freepik</p></a>
   </center>
 
 <p>
