Added Open Gates link

--- a/personal.html
+++ b/personal.html
@@ -61,6 +61,7 @@ He knew that they weren't.
 <h3><a href="EL_Breen.html">Edward L. Breen's WWI AEF Experience</a></h3>
 <h3><a href="EL_Breen_Files/Travels2MeusseArgonne2018.pdf">Traveling to France to retrace Edward L. Breen's WWI AEF Experience</a></h3> <p> &nbsp;
 <p>
+<h3><a href="https://maci.univ-grenoble-alpes.fr/fr/international/global-engagement">If you're an American looking for 'a secure and welcoming place to pursue their research and develop new projects', you come to Grenoble, France!</a></h3>
 <h3><a href="https://www.newyorker.com/cartoon/a26148">The Republican Playbook</a></h3>
 <h3><a href="https://lincolnproject.us">The Lincoln Project</a></h3>
 <h3><a href="https://rvat.org">Republican Voters Against Trump</a></h3>
