Put in full URL for E.L. Breen files.

--- a/personal.html
+++ b/personal.html
@@ -58,8 +58,8 @@ people could want to do otherwise; he had learned only that they did.
 It still seemed simple and incomprehensible to him: simple that things
 should be right, <br>and incomprehensible that they weren't.
 He knew that they weren't.
-<h3><a href="EL_Breen.html">Edward L. Breen's WWI AEF Experience</a></h3>
-<h3><a href="EL_Breen_Files/Travels2MeusseArgonne2018.pdf">Traveling to France to retrace Edward L. Breen's WWI AEF Experience</a></h3> <p> &nbsp;
+<h3><a href="http://www.cs.drexel.edu/~david/EL_Breen.html">Edward L. Breen's WWI AEF Experience</a></h3>
+<h3><a href="http://www.cs.drexel.edu/~david/EL_Breen_Files/Travels2MeusseArgonne2018.pdf">Traveling to France to retrace Edward L. Breen's WWI AEF Experience</a></h3> <p> &nbsp;
 <p>
 <h3><a href="https://maci.univ-grenoble-alpes.fr/fr/international/global-engagement">If you're an American looking for 'a secure and welcoming place to pursue their research and develop new projects', you should come to Grenoble, France!</a></h3>
 <h3><a href="https://www.newyorker.com/cartoon/a26148">The Republican Playbook</a></h3>
