Added stuff about Kirk assassination.

--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
   <center>
   <a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/"><img width="400" align="center" src="hand-holding-placard.jpg"></a>
 <a href="http://www.freepik.com"><p style="font-size:8px">Blank placard designed by Freepik</p></a>
-  <p><a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/">Martin Niemoller's Statement</a>
+  <p><a href="https://hmd.org.uk/resource/first-they-came-by-pastor-martin-niemoller/">Martin Niem&ouml;ller's Statement</a>
   </center>
 
 <p>
@@ -66,6 +66,21 @@ He knew that they weren't.
 <h3><a href="https://www.newyorker.com/cartoon/a26148">The Republican Playbook</a></h3>
 <h3><a href="https://lincolnproject.us">The Lincoln Project</a></h3>
 <h3><a href="https://rvat.org">Republican Voters Against Trump</a></h3>
+<p>
+&nbsp;
+<p>
+<h3><a href="TrumpStatement.html">
+President Trump's remarks about Charlie Kirk assassination</a></h3>
+<h3><a href="https://x.com/JoeBiden/status/1965884787543171185">
+President Biden's remarks about Charlie Kirk assassination</a></h3>
+<h3><a href="https://x.com/BarackObama/status/1965889591090753651">
+President Obama's remarks about Charlie Kirk assassination</a></h3>
+<h3><a href="https://www.bushcenter.org/newsroom/statement-by-president-george-w-bush-on-charlie-kirk">
+President Bush's remarks about Charlie Kirk assassination</a></h3>
+<h3><a href="https://x.com/BillClinton/status/1965914828213719085">
+President Clinton's remarks about Charlie Kirk assassination</a></h3>
+<h3><a href="KirkStatement.html">
+Charlie Kirk's remarks about the Second Amendment</a></h3>
 <p>
 &nbsp;
 <p>
